	(load_section): #if 0 out no-op code that uses elf_machine.
	* priv.h (elf_machine_matches_host): Declare it.
	(elf_machine, mach_host_elf_machine): Remove decls.
	* main.c (main) [!BFD]: Don't call mach_host_elf_machine.
	(elf_machine): Variable removed.

	* exec.c (map): Don't cast arg to munmap to vm_address_t.

	* priv.h: Add #include <sys/mman.h> for munmap decl.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* core.c (core_dump_task): Use munmap instead of vm_deallocate,
	when it's from our own task.
	* elfcore.c: Likewise.
	* exec.c (load_section): Likewise.
	(map): Likewise.
	(close_exec_stream): Likewise.
	(finish_mapping): Likewise.
	(load): Likewise.
	(do_exec): Likewise.
	(S_exec_setexecdata): Likewise.
	* hashexec.c (check_hashbang): Likewise.
	* main.c (deadboot): Likewise.

1999-06-04  Roland McGrath  <roland@baalperazim.frob.com>

	* exec.c (map): Fix mapping calls to use F->__offset consistently
	instead of F->__target.

1999-05-16  Roland McGrath  <roland@baalperazim.frob.com>

	* hashexec.c (check_hashbang): Fix bug in last change.

1999-05-15  Roland McGrath  <roland@baalperazim.frob.com>

	* hashexec.c (check_hashbang): Trim trailing blanks after interpreter
	argument.

1998-09-05  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

 	* do-bunzip2.c: New file.
 	* exec.c (check_bzip2): New function.
 	(BZIP2): New cpp symbol. If defined, bunzip2 engine is enabled.
 	* Makefile (bzip2-objects): New variable.
 	(OBJS): Add bzip2-objects.
 	(CPPFLAGS): Add -DBZIP2.

1999-04-27  Roland McGrath  <roland@baalperazim.frob.com>

	* exec.c (do_exec): Implement EXEC_SIGTRAP flag.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	* main.c (S_exec_init): Deallocate PROCSERVER port when finished.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	* main.c (S_exec_init): Remove variable DEV_MASTER; pass null instead
	since we don't need it.  Use assert_perror on getting the host-priv