@@ -18,6 +18,14 @@
 
 	* priv.h: Add #include <sys/mman.h> for munmap decl.
 
+1999-07-06  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* exec.c (load_section): Use mmap instead of vm_allocate when
+	allocating in mach_task_self ().
+	(servercopy): Likewise.
+	(do_exec): Likewise.
+	* hashexec.c (check_hashbang): Likewise.
+
 1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* core.c (core_dump_task): Use munmap instead of vm_deallocate,
